--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Simple Login Form Example</title>
+  <title>Login</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Rubik:400,700'>
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,10 +32,13 @@
           <div class="input-field">
             <input type="password" placeholder="Password" autocomplete="new-password">
           </div>
+          <div class="input-field">
+            <input type="checkbox" placeholder="Password" autocomplete="new-password">Remember Me?
+          </div>
         </div>
         <div class="action">
 
-          <button>Sign in</button>
+          <button onclick="window.location.href='gk301.html'" target="_blank">Sign in</button>
         </div>
       </form>
       <div class="action register">
