--- a/gk305.html
+++ b/gk305.html
@@ -1,136 +1,17 @@
 <!DOCTYPE html> 
 <html>
 <head>
-  <title>Bootstrap Intro</title>
+  <title>GK305</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  
+  <link rel="stylesheet" href="./labs.css">
 
-  
-  <style>
-    .navbar-custom {
-        background-color: seagreen;
-        border-bottom: 1px solid white;
-        height: 9vh
-    }
-    .navbar-brand > img {
-        height: 5vh;
-        width: 5vh;
-    }
-    .btn-custom {
-        background-color: white;
-        color: seagreen;
-        border-color: white;
-    }
-    .btn-custom:hover {
-        background-color: seagreen;
-        color: white;
-        border-color: white;
-    }
-    .main-container{
-        height: 85vh;
-        margin-top: 1vh
-    }
-    .col-2 {
-        background-color: white;
-        padding: 2vh
-    }
-    .col-7 {
-        background-color: white;
-    }
-    .col-3 {
-        background-color: white;
-        padding: 2vh
-    }
-    .calendar {
-        font-size: 1.1vh;
-    }
-    .bg-gray {
-        background-color: lightgray;
-    }
-    .time {
-        margin-top: 1vh
-    }
-    .timedrop {
-        width: 100%
-    }
-    .btn-custom {
-        background-color: white;
-        color: black;
-        border-color: black;
-    }
-    .btn-custom:hover {
-        background-color: seagreen;
-        color: white;
-        border-color: white;
-    }
-    .book-head {
-        font-size: 3vh;
-        margin-bottom: 1vh;
-    }
-    .anonymity {
-        margin-top: 1vh;
-    }
-    .anonyyes {
-        width:48%
-    }
-    .anonyno {
-        width:48%
-    }
-    .reservebutton {
-        margin-top: 1vh;
-        background-color: seagreen;
-        color: white;
-        border-color: white;
-    }
-    .maincomp {
-        width: 100%;
-        margin-bottom: 2vh
-    }
-    .card-body-comp {
-        height:12vh
-    }
-    .card-header-comp {
-        background-color: mediumseagreen;
-        color: white
-    }
-    .comp-full {
-      background-color: seagreen;
-        color: lightgray
-    }
-    .comp-active {
-        background-color:mediumseagreen;
-        color: white;
-    }
-    .comp-whole {
-      border: 1px solid black;
-    }
-    .laboratories {
-        margin-top: 1vh;
-    }
-    .labdrop {
-        width: 100%
-    }
-    .labs {
-      margin-bottom: 1vh;
-    }
-    .occupiedleft {
-      background-color:seagreen;
-      color: white
-    }
-    .searchgroup {
-      margin-right: 2vw
-    }
-    .technician {
-      margin-top: 1vh;
-    }
-  </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)">
+          <a class="navbar-brand" href="gk305.html">
             <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -150,7 +31,7 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="jlogin.html">Logout</a>
+              <a class="nav-link signlink" href="login.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -168,7 +49,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Anonymous</div>
+                      <div class="accordion-body deleteright">Anonymous
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                      </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -178,7 +61,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Anonymous</div>
+                      <div class="accordion-body deleteright">Anonymous
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                      </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -188,7 +73,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"><a href="">Dani Ughoc</a></div>
+                      <div class="accordion-body"><a href="ughoc.html" class="leftlinks deleteright">Dani Ughoc</a>
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                    </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -198,7 +85,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"><a href="">Rowell Herrera</a></div>
+                      <div class="accordion-body"><a href="herrera.html" class="leftlinks deleteright">Rowell Herrera</a>
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                    </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -208,7 +97,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"><a href="">Joaquin de Guzman</a></div>
+                      <div class="accordion-body"><a href="deguzman.html" class="leftlinks deleteright">Joaquin de Guzman</a>
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                    </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -218,7 +109,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"><a href="">Gloc 9</a></div>
+                      <div class="accordion-body"><a href="nine.html" class="leftlinks deleteright">Gloc 9</a>
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                    </div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -228,7 +121,9 @@
                       </button>
                     </h2>
                     <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body"><a href="">Win Metawin</a></div>
+                      <div class="accordion-body"><a href="metawin.html" class="leftlinks deleteright">Win Metawin</a>
+                        <div class="btn btn-dark btn-sm">Delete</div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -252,7 +147,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div class="card maincomp comp-whole">
                             <div class="card-header comp-full">
                               1
                             </div>
@@ -288,7 +183,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp comp-whole">
+                        <div class="card maincomp">
                             <div class="card-header card-header-comp">
                               5
                             </div>
@@ -445,7 +340,7 @@
                 <div class="container calendar text-center justify-content-center">
                     <div class="row">
                         <div class="span12">
-                            <table class="table-condensed table-bordered table-striped">
+                            <table class="table-condensed table-bordered table-striped w-100">
                                 <thead>
                                     <tr>
                                       <th colspan="7">
