--- a/gk305.html
+++ b/gk305.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Profile</a>
+                <a class="nav-link" href="metawin.html">Profile</a>
               </li>
             </ul>
           </div>
