--- a/ughoc.html
+++ b/ughoc.html
@@ -12,30 +12,31 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)">
+          <a class="navbar-brand" href="gk302.html">
             <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Labs</a>
-              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Contact Admin</a>
+                <a class="nav-link" href="ughoc.html">Profile</a>
               </li>
             </ul>
-            <form class="d-flex">
+          </div>
+          <div class="justify-content-center">
+            <form class="d-flex justify-content-center searchgroup">
               <input class="form-control me-2" type="text" placeholder="Search">
               <button class="btn btn-primary btn-custom" type="button">Search</button>
             </form>
           </div>
+          <ul class="navbar-nav me-2">
+            <li class="nav-item">
+              <a class="nav-link signlink" href="login.html">Logout</a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     <div class="all-content">
          <div class="container-fluid">
             <div class="row h-100">
