--- a/gk303.html
+++ b/gk303.html
@@ -12,14 +12,14 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
           <a class="navbar-brand" href="gk303.html">
-            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
+            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="herrera.html">Profile</a>
+                <a class="nav-link" href="deguzman.html">Profile</a>
               </li>
             </ul>
           </div>
@@ -31,7 +31,7 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="login.html">Logout</a>
+              <a class="nav-link signlink" href="index.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -323,6 +323,17 @@
                     </div>
                 </div>
                 
+                <div class="legend">
+                  <strong>Legend:</strong>
+                  <div class="legendbox1">
+                    cut
+                  </div>
+                  Available
+                  <div class="legendbox2">
+                    cut
+                  </div>
+                  Occupied
+                </div>
             </div>
             <div class="col-2">
                 <div class="book-head">Check:</div>
@@ -333,11 +344,19 @@
                                 <thead>
                                     <tr>
                                       <th colspan="7">
-                                        <span class="btn-group">
-                                            <a class="btn"><i class="icon-chevron-left"></i></a>
-                                            <a class="btn active">February 2024</a>
-                                            <a class="btn"><i class="icon-chevron-right"></i></a>
-                                        </span>
+                                        <span class="btn-group calendargroup">
+                                          <a class="btn">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                              <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
+                                            </svg>
+                                        </a>
+                                          <a class="btn monthcalendar">February</a>
+                                          <a class="btn">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                              <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                                            </svg>
+                                          </a>
+                                      </span>
                                       </th>
                                     </tr>
                                     <tr>
