--- a/herrera.html
+++ b/herrera.html
@@ -11,8 +11,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="gk302.html">
-            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
+          <a class="navbar-brand" href="gk301.html">
+            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,16 +31,16 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="login.html">Logout</a>
+              <a class="nav-link signlink" href="index.html">Logout</a>
             </li>
           </ul>
         </div>
       </nav>
     <div class="all-content">
          <div class="container-fluid">
-            <div class="row h-100">
+            <div class="row">
                 <div class="col-9  ">
-                    <div class="row h-40 ">
+                    <div class="row">
                         <div class="col-2 d-flex justify-content-center align-items-center ">
                             <div class="profile-photo ">
                                 <img src="https://static.wikia.nocookie.net/floptok/images/9/97/Products.png/revision/latest?cb=20231127024357" alt="Profile Photo">
@@ -61,7 +61,7 @@
                         
                         
                     </div>
-                    <div class="row h-50 ">
+                    <div class="row">
                         <div class="row-4 ">
                             <div class="profile-section">
                                 <h2 class="profile-section-title">Contact</h2>
