--- a/ughoc.html
+++ b/ughoc.html
@@ -12,8 +12,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="gk302.html">
-            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
+          <a class="navbar-brand" href="gk301.html">
+            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,14 +32,14 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="login.html">Logout</a>
+              <a class="nav-link signlink" href="index.html">Logout</a>
             </li>
           </ul>
         </div>
       </nav>
     <div class="all-content">
          <div class="container-fluid">
-            <div class="row h-100">
+            <div class="row">
                 <div class="col-9  ">
                     <div class="row h-40 ">
                         <div class="col-2 d-flex justify-content-center align-items-center ">
