--- a/edit-profile-page-bootstrap.html
+++ b/edit-profile-page-bootstrap.html
@@ -10,15 +10,15 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)">
-            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
+          <a class="navbar-brand" href="gk301.html">
+            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0)">Profile</a>
+                <a class="nav-link" href="ughoc.html">Profile</a>
               </li>
             </ul>
           </div>
@@ -30,7 +30,7 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="login.html">Logout</a>
+              <a class="nav-link signlink" href="index.html">Logout</a>
             </li>
           </ul>
         </div>
