--- a/gk301.html
+++ b/gk301.html
@@ -6,13 +6,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./labs.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  
    
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
         <div class="container-fluid">
           <a class="navbar-brand" href="gk301.html">
-            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs Reserve</a>
+            <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab Reserve</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -31,7 +32,7 @@
           </div>
           <ul class="navbar-nav me-2">
             <li class="nav-item">
-              <a class="nav-link signlink" href="login.html">Logout</a>
+              <a class="nav-link signlink" href="index.html">Logout</a>
             </li>
           </ul>
         </div>
@@ -324,6 +325,17 @@
                     </div>
                 </div>
                 
+                <div class="legend">
+                  <strong>Legend:</strong>
+                  <div class="legendbox1">
+                    cut
+                  </div>
+                  Available
+                  <div class="legendbox2">
+                    cut
+                  </div>
+                  Occupied
+                </div>
             </div>
             <div class="col-2">
                 <div class="book-head">Check:</div>
@@ -334,10 +346,18 @@
                                 <thead>
                                     <tr>
                                       <th colspan="7">
-                                        <span class="btn-group">
-                                            <a class="btn"><i class="icon-chevron-left"></i></a>
-                                            <a class="btn active">February 2024</a>
-                                            <a class="btn"><i class="icon-chevron-right"></i></a>
+                                        <span class="btn-group calendargroup">
+                                            <a class="btn">
+                                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
+                                              </svg>
+                                          </a>
+                                            <a class="btn monthcalendar">February</a>
+                                            <a class="btn">
+                                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                                              </svg>
+                                            </a>
                                         </span>
                                       </th>
                                     </tr>
