--- a/register.html
+++ b/register.html
@@ -17,8 +17,8 @@
         <!-- partial:index.partial.html -->
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top navbar-custom">
             <div class="container-fluid justify-content-center">
-                <a class="navbar-brand" href="javascript:void(0)">
-                    <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLabs
+                <a class="navbar-brand" href="index.html">
+                    <img src="https://upload.wikimedia.org/wikipedia/tl/e/ed/DLSU_Logo_Clear_Background.png"> AnimoLab
                     Reserve</a>
             </div>
         </nav>
@@ -47,11 +47,11 @@
                     </div>
                 </div>
                 <div class="action">
-                    <button onclick="window.location.href='login.html'" target="_blank">Create Account</button>
+                    <button onclick="window.location.href='index.html'" target="_blank">Create Account</button>
                 </div>
             </form>
             <div class="action login">
-                <button onclick="window.location.href='login.html'" target="_blank">Have an Account?</button>
+                <button onclick="window.location.href='index.html'" target="_blank">Have an Account?</button>
             </div>
         </div>
     </div>
