--- a/gk301.html
+++ b/gk301.html
@@ -6,7 +6,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./labs.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./labs.js"></script>
+
    
 </head>
 <body>
@@ -138,7 +140,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <div class="card maincomp comp-whole">
+                        <div id="seat1" class="card maincomp comp-whole">
                             <div class="card-header card-header-comp comp-active">
                               1
                             </div>
@@ -147,7 +149,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat2" class="card maincomp">
                             <div class="card-header card-header-comp">
                               2
                             </div>
@@ -156,7 +158,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat3" class="card maincomp">
                             <div class="card-header card-header-comp">
                               3
                             </div>
@@ -165,7 +167,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat4" class="card maincomp">
                             <div class="card-header card-header-comp">
                               4
                             </div>
@@ -174,7 +176,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat5" class="card maincomp">
                             <div class="card-header card-header-comp">
                               5
                             </div>
@@ -185,7 +187,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat6" class="card maincomp">
                             <div class="card-header card-header-comp">
                               6
                             </div>
@@ -194,7 +196,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat7" class="card maincomp">
                             <div class="card-header card-header-comp">
                               7
                             </div>
@@ -203,7 +205,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat8" class="card maincomp">
                             <div class="card-header card-header-comp">
                               8
                             </div>
@@ -212,7 +214,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat9" class="card maincomp">
                             <div class="card-header card-header-comp">
                               9
                             </div>
@@ -221,7 +223,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat10" class="card maincomp">
                             <div class="card-header card-header-comp">
                               10
                             </div>
@@ -232,7 +234,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat11" class="card maincomp">
                             <div class="card-header card-header-comp">
                               11
                             </div>
@@ -241,7 +243,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat12" class="card maincomp">
                             <div class="card-header card-header-comp">
                               12
                             </div>
@@ -250,7 +252,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat13" class="card maincomp">
                             <div class="card-header comp-full">
                               13
                             </div>
@@ -259,7 +261,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat14" class="card maincomp">
                             <div class="card-header card-header-comp">
                               14
                             </div>
@@ -268,7 +270,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat15" class="card maincomp">
                             <div class="card-header comp-full">
                               15
                             </div>
@@ -279,7 +281,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat16" class="card maincomp">
                             <div class="card-header card-header-comp">
                               16
                             </div>
@@ -288,7 +290,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat17" class="card maincomp">
                             <div class="card-header card-header-comp">
                               17
                             </div>
@@ -297,7 +299,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat18" class="card maincomp">
                             <div class="card-header card-header-comp">
                               18
                             </div>
@@ -306,7 +308,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat19" class="card maincomp">
                             <div class="card-header card-header-comp">
                               19
                             </div>
@@ -315,7 +317,7 @@
                          </div>
                     </div>
                     <div class="col-sm">
-                        <div class="card maincomp">
+                        <div id="seat20" class="card maincomp">
                             <div class="card-header card-header-comp">
                               20
                             </div>
@@ -347,13 +349,13 @@
                                     <tr>
                                       <th colspan="7">
                                         <span class="btn-group calendargroup">
-                                            <a class="btn">
+                                            <a class="btn butprev">
                                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
                                                 <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"/>
                                               </svg>
                                           </a>
-                                            <a class="btn monthcalendar">February</a>
-                                            <a class="btn">
+                                            <a class="btn monthcalendar"><div id="calMonth">February</div></a>
+                                            <a class="btn butnext">
                                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
                                                 <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                                               </svg>
@@ -373,49 +375,49 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td class="bg-gray  text-muted">28</td>
-                                        <td class="bg-gray  text-muted">29</td>
-                                        <td class="bg-gray  text-muted">30</td>
-                                        <td class="bg-gray  text-muted">31</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
+                                        <td id="cell1" class="bg-gray  text-muted"> <div class="calWeight">28</div></td>
+                                        <td id="cell2" class="bg-gray  text-muted">29</td>
+                                        <td id="cell3" class="bg-gray  text-muted">30</td>
+                                        <td id="cell4" class="bg-gray  text-muted">31</td>
+                                        <td id="cell5">1</td>
+                                        <td id="cell6">2</td>
+                                        <td id="cell7">3</td>
                                     </tr>
                                     <tr>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                        <td>10</td>
+                                        <td id="cell8">4</td>
+                                        <td id="cell9">5</td>
+                                        <td id="cell10">6</td>
+                                        <td id="cell11">7</td>
+                                        <td id="cell12">8</td>
+                                        <td id="cell13">9</td>
+                                        <td id="cell14">10</td>
                                     </tr>
                                     <tr>
-                                        <td>11</td>
-                                        <td>12</td>
-                                        <td>13</td>
-                                        <td class="btn-primary"><strong>14</strong></td>
-                                        <td>15</td>
-                                        <td>16</td>
-                                        <td>17</td>
+                                        <td id="cell15">11</td>
+                                        <td id="cell16">12</td>
+                                        <td id="cell17">13</td>
+                                        <td id="cell18" class="calWeight">14</td>
+                                        <td id="cell19">15</td>
+                                        <td id="cell20">16</td>
+                                        <td id="cell21">17</td>
                                     </tr>
                                     <tr>
-                                        <td>18</td>
-                                        <td>19</td>
-                                        <td>20</td>
-                                        <td>21</td>
-                                        <td>22</td>
-                                        <td>23</td>
-                                        <td>24</td>
+                                        <td id="cell22">18</td>
+                                        <td id="cell23">19</td>
+                                        <td id="cell24">20</td>
+                                        <td id="cell25">21</td>
+                                        <td id="cell26">22</td>
+                                        <td id="cell27">23</td>
+                                        <td id="cell28">24</td>
                                     </tr>
                                     <tr>
-                                        <td>25</td>
-                                        <td>26</td>
-                                        <td>27</td>
-                                        <td>28</td>
-                                        <td>29</td>
-                                        <td class="bg-gray  text-muted">1</td>
-                                        <td class="bg-gray  text-muted">2</td>
+                                        <td id="cell29">25</td>
+                                        <td id="cell30">26</td>
+                                        <td id="cell31">27</td>
+                                        <td id="cell32">28</td>
+                                        <td id="cell33">29</td>
+                                        <td id="cell34" class="bg-gray  text-muted">1</td>
+                                        <td id="cell35" class="bg-gray  text-muted">2</td>
                                     </tr>
                                 </tbody>
                             </table>
