working dashboard without ajax

--- a/gk301.html
+++ b/gk301.html
@@ -375,7 +375,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td id="cell1" class="bg-gray  text-muted"> <div class="calWeight">28</div></td>
+                                        <td id="cell1" class="bg-gray  text-muted">28</td>
                                         <td id="cell2" class="bg-gray  text-muted">29</td>
                                         <td id="cell3" class="bg-gray  text-muted">30</td>
                                         <td id="cell4" class="bg-gray  text-muted">31</td>
@@ -396,7 +396,7 @@
                                         <td id="cell15">11</td>
                                         <td id="cell16">12</td>
                                         <td id="cell17">13</td>
-                                        <td id="cell18" class="calWeight">14</td>
+                                        <td id="cell18" class="calweight">14</td>
                                         <td id="cell19">15</td>
                                         <td id="cell20">16</td>
                                         <td id="cell21">17</td>
@@ -452,13 +452,13 @@
                           07:30 a.m. - 09:00 a.m.
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                          <button class="dropdown-item" type="button">07:30 a.m. - 09:00 a.m.</button>
-                          <button class="dropdown-item" type="button">09:15 a.m. - 10:45 a.m.</button>
-                          <button class="dropdown-item" type="button">11:00 a.m. - 12:30 p.m.</button>
-                          <button class="dropdown-item" type="button">12:45 p.m. - 02:15 p.m.</button>
-                          <button class="dropdown-item" type="button">02:30 p.m. - 04:00 p.m.</button>
-                          <button class="dropdown-item" type="button">04:15 p.m. - 05:45 p.m.</button>
-                          <button class="dropdown-item" type="button">06:00 p.m. - 07:30 p.m.</button>
+                          <button id="drop1" class="dropdown-item" type="button">07:30 a.m. - 09:00 a.m.</button>
+                          <button id="drop2" class="dropdown-item" type="button">09:15 a.m. - 10:45 a.m.</button>
+                          <button id="drop3" class="dropdown-item" type="button">11:00 a.m. - 12:30 p.m.</button>
+                          <button id="drop4" class="dropdown-item" type="button">12:45 p.m. - 02:15 p.m.</button>
+                          <button id="drop5" class="dropdown-item" type="button">02:30 p.m. - 04:00 p.m.</button>
+                          <button id="drop6" class="dropdown-item" type="button">04:15 p.m. - 05:45 p.m.</button>
+                          <button id="drop7" class="dropdown-item" type="button">06:00 p.m. - 07:30 p.m.</button>
                         </div>
                       </div>
                 </div>
@@ -476,10 +476,10 @@
 
                 <div class="technician">
                   <div>Name:</div>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name">
+                  <input type="email" class="form-control" id="namespace" aria-describedby="emailHelp" placeholder="Enter name">
                 </div>
 
-                <button type="button" class="btn btn-success w-100 reservebutton">Reserve</button>
+                <button type="button" class="btn btn-success w-100 reservebutton" id="reservebtn">Reserve</button>
                 
             </div>
         </div>
